# newsclf

./: .gitignore  README.md  pyproject.toml  python_inference.py  requirements.txt
scripts/: download_data.py  mocking.py  preprocessing.py  train.py
src/newsclf/: __init__.py  config.py  data.py  datasets.py  evaluate.py  inference.py  main.py  modeling.py  training.py
tests/: test_all.py
