[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newsclf"
version = "0.1.0"
description = "BBC topic classifier (BERT-family) with training + inference."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "torch",
  "transformers>=4.44,<5",
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.4",
]

[project.scripts]
newsclf = "newsclf.main:cli"
